--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
     document.write("<br>");
 
-    // for (let x = 9; x > -1; x--) {
+    for (let x = 9; x > -1; x--) {
 
-    //     for (let y = 9; y > -1; y--) {
-    //         document.write(`${x}${y} `);
-    //     }        document.write("<br>");
+        for (let y = 9; y > -1; y--) {
+            document.write(`${x}${y} `);
+        }        document.write("<br>");
 
-    // }
+    }
 </script>
 </html>
